tests/shadow-05/out.txt
error: mismatched types: expected unit, found int -> exn
  ┌─ err.sml:3:1
  │
3 │ val _: unit = E
  │ ^^^^^^^^^^^^^^^

typechecking failed
